fix(label): allow text to truncate (#5364)

--- a/src/patternfly/components/Label/label-text.hbs
+++ b/src/patternfly/components/Label/label-text.hbs
@@ -2,5 +2,9 @@
   {{#if label-text--attribute}}
     {{{label-text--attribute}}}
   {{/if}}>
-  {{> @partial-block}}
+  {{#if label-text--value}}
+    {{{label-text--value}}}
+  {{else if @partial-block}}
+    {{> @partial-block}}
+  {{/if}}
 </span>
