--- a/src/patternfly/components/Label/label.hbs
+++ b/src/patternfly/components/Label/label.hbs
@@ -1,14 +1,34 @@
-<{{# if label--type}}{{label--type}}{{else if label--IsOverflow}}button{{else if label--IsAdd}}button{{else}}span{{/if}} class="pf-c-label{{#if label--IsOverflow}} pf-m-overflow{{/if}}{{#if label--IsAdd}} pf-m-add{{/if}}{{#if label--modifier}} {{label--modifier}}{{/if}}{{#if label--IsEditable}} pf-m-editable{{/if}}{{#if label--IsEditableActive}} pf-m-editable-active{{/if}}"
-  {{#if label--IsOverflow}}type="button"{{else if label--IsAdd}}type="button"{{/if}}
+<{{# if label--type}}{{label--type}}{{else if label--IsOverflow}}button{{else if label--IsAdd}}button{{else}}span{{/if}} class="pf-c-label
+  {{#if label--IsOutlined}} pf-m-outline{{/if}}
+  {{#if label--IsCompact}} pf-m-compact{{/if}}
+  {{#if label--IsOverflow}} pf-m-overflow{{/if}}
+  {{#if label--IsAdd}} pf-m-add{{/if}}
+  {{#if label--IsEditable}} pf-m-editable{{/if}}
+  {{#if label--IsEditableActive}} pf-m-editable-active{{/if}}
+  {{#if label--color}}
+    pf-m-{{label--color}}
+  {{/if}}
+  {{#if label--modifier}} {{label--modifier}}{{/if}}"
+  {{#if (concat label--IsOverflow label--IsAdd)}}
+    type="button"
+  {{/if}}
   {{#if label--attribute}}
     {{{label--attribute}}}
   {{/if}}>
   {{#> label-content}}
-    {{~> @partial-block}}
+    {{#if label-icon--value}}
+      {{> label-icon}}
+    {{/if}}
+    {{#if label-text--value}}
+      {{> label-text}}
+    {{/if}}
+    {{#if @partial-block}}
+      {{> @partial-block}}
+    {{/if}}
   {{/label-content}}
   {{#if label--isRemovable}}
     {{#> label-actions}}
-      {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'id="' label--id '-button"
+      {{#> button button--IsPlain=true button--attribute=(concat 'id="' label--id '-button"
     aria-label="Remove" aria-labelledby="' label--id '-button ' label--id '-text"')}}
         <i class="fas fa-times fa-fw" aria-hidden="true"></i>
       {{/button}}
