--- a/src/patternfly/components/Popover/popover-title-text.hbs
+++ b/src/patternfly/components/Popover/popover-title-text.hbs
@@ -1,6 +1,22 @@
-<span class="pf-c-popover__title-text{{#if popover-title-text--modifier}} {{popover-title-text--modifier}}{{/if}}"
+<{{#if popover-title--type}}{{popover-title--type}}{{else}}h1{{/if}} class="pf-c-popover__title-text{{#if popover-title-text--modifier}} {{popover-title-text--modifier}}{{/if}}"
   {{#if popover-title-text--attribute}}
     {{{popover-title-text--attribute}}}
   {{/if}}>
+    {{#if popover--IsAlert}}
+    <span class="pf-screen-reader">
+      {{#if popover--IsDefaultAlert}}
+        Default
+      {{else if popover--IsInfoAlert}}
+        Info
+      {{else if popover--IsSuccessAlert}}
+        Success
+      {{else if popover--IsWarningAlert}}
+        Warning
+      {{else if popover--IsDangerAlert}}
+        Danger
+      {{/if}}
+      alert:
+    </span>
+  {{/if}}
   {{> @partial-block}}
-</span>
+</{{#if popover-title--type}}{{popover-title--type}}{{else}}h1{{/if}}>
