--- a/src/patternfly/components/Popover/popover.scss
+++ b/src/patternfly/components/Popover/popover.scss
@@ -45,19 +45,17 @@
   --pf-c-popover__arrow--m-left--Rotate: 45deg;
 
   // Close
-  --pf-c-popover--c-button--MarginLeft: var(--pf-global--spacer--sm);
-  --pf-c-popover--c-button--Top: calc(var(--pf-c-popover__content--PaddingTop) - var(--pf-global--spacer--form-element)); // align top of button with top of text
-  --pf-c-popover--c-button--Right: calc(var(--pf-c-popover__content--PaddingRight) - var(--pf-global--spacer--md)); // align right of content
-  --pf-c-popover--c-button--sibling--PaddingRight: var(--pf-global--spacer--2xl);
+  --pf-c-popover__close--Top: calc(var(--pf-c-popover__content--PaddingTop) - var(--pf-global--spacer--form-element)); // align top of button with top of text
+  --pf-c-popover__close--Right: calc(var(--pf-c-popover__content--PaddingRight) - var(--pf-global--spacer--md)); // align right of content
+  --pf-c-popover__close--sibling--PaddingRight: var(--pf-global--spacer--2xl);
 
   // Header
-  --pf-c-popover--c-title--MarginBottom: var(--pf-global--spacer--sm);
+  --pf-c-popover__header--MarginBottom: var(--pf-global--spacer--sm);
 
-  // Title
-  --pf-c-popover__title--MarginBottom: var(--pf-global--spacer--sm);
-  --pf-c-popover__title--LineHeight: var(--pf-global--LineHeight--md);
-  --pf-c-popover__title--FontFamily: var(--pf-global--FontFamily--heading--sans-serif);
-  --pf-c-popover__title--FontSize: var(--pf-global--FontSize--md);
+  // Title text
+  --pf-c-popover__title-text--LineHeight: var(--pf-global--LineHeight--md);
+  --pf-c-popover__title-text--FontFamily: var(--pf-global--FontFamily--heading--sans-serif);
+  --pf-c-popover__title-text--FontSize: var(--pf-global--FontSize--md);
 
   // Title icon
   --pf-c-popover__title-icon--MarginRight: var(--pf-global--spacer--sm);
@@ -187,22 +185,17 @@
   position: relative;
   padding: var(--pf-c-popover__content--PaddingTop) var(--pf-c-popover__content--PaddingRight) var(--pf-c-popover__content--PaddingBottom) var(--pf-c-popover__content--PaddingLeft);
   background-color: var(--pf-c-popover__content--BackgroundColor);
+}
 
-  // Remove in breaking change
-  > .pf-c-title {
-    margin-bottom: var(--pf-c-popover--c-title--MarginBottom);
-  }
+// Close button
+.pf-c-popover__close {
+  position: absolute;
+  top: var(--pf-c-popover__close--Top);
+  right: var(--pf-c-popover__close--Right);
 
-  // Close button
-  > .pf-c-button {
-    position: absolute;
-    top: var(--pf-c-popover--c-button--Top);
-    right: var(--pf-c-popover--c-button--Right);
-
-    // Create room for the close button
-    + * {
-      padding-right: var(--pf-c-popover--c-button--sibling--PaddingRight);
-    }
+  // Create room for the close button
+  + * {
+    padding-right: var(--pf-c-popover__close--sibling--PaddingRight);
   }
 }
 
@@ -215,16 +208,13 @@
   box-shadow: var(--pf-c-popover__arrow--BoxShadow);
 }
 
-.pf-c-popover__title {
-  flex: 0 0 auto;
-  margin-bottom: var(--pf-c-popover__title--MarginBottom);
-  font-family: var(--pf-c-popover__title--FontFamily);
-  font-size: var(--pf-c-popover__title--FontSize);
-  line-height: var(--pf-c-popover__title--LineHeight);
+.pf-c-popover__header {
+  margin-bottom: var(--pf-c-popover__header--MarginBottom);
+}
 
-  &.pf-m-icon {
-    display: flex;
-  }
+.pf-c-popover__title {
+  display: flex;
+  flex: 0 0 auto;
 }
 
 .pf-c-popover__title-icon {
@@ -233,6 +223,9 @@
 }
 
 .pf-c-popover__title-text {
+  font-family: var(--pf-c-popover__title-text--FontFamily);
+  font-size: var(--pf-c-popover__title-text--FontSize);
+  line-height: var(--pf-c-popover__title-text--LineHeight);
   color: var(--pf-c-popover__title-text--Color, inherit);
 }
 
