fix(Wizard): add back else if for partialblock

--- a/src/patternfly/components/Wizard/wizard-title.hbs
+++ b/src/patternfly/components/Wizard/wizard-title.hbs
@@ -6,7 +6,7 @@
     {{#> wizard-title-text}}
       {{{wizard-title-text--value}}}
     {{/wizard-title-text}}
-  {{else}}
+  {{else if @partial-block}}
     {{> @partial-block}}
   {{/if}}
 </div>
