feat(page): updated insets to match

--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -6,6 +6,9 @@ $pf-c-page--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
 // URL.com/guidelines#layout
 .pf-c-page {
   --pf-c-page--BackgroundColor: var(--pf-global--BackgroundColor--light-300);
+  --pf-c-page--inset: 0;
+  --pf-c-page--m-page-insets--inset: var(--pf-global--spacer--md);
+  --pf-c-page--m-page-insets--xl--inset: var(--pf-global--spacer--lg);
 
   // Header
   --pf-c-page__header--BackgroundColor: var(--pf-global--BackgroundColor--dark-100);
@@ -19,6 +22,7 @@ $pf-c-page--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
 
   @media (min-width: $pf-global--breakpoint--xl) {
     --pf-c-page__header-brand--PaddingLeft: var(--pf-c-page__header-brand--xl--PaddingLeft);
+    --pf-c-page--m-page-insets--inset: var(--pf-c-page--m-page-insets--xl--inset);
   }
 
   // Toggle
@@ -86,19 +90,13 @@ $pf-c-page--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
   --pf-c-page__sidebar--xl--TranslateX: 0;
 
   // Sidebar body
-  --pf-c-page__sidebar-body--PaddingTop: var(--pf-global--spacer--md);
-  --pf-c-page__sidebar-body--PaddingRight: 0;
-  --pf-c-page__sidebar-body--PaddingBottom: var(--pf-global--spacer--md);
-  --pf-c-page__sidebar-body--PaddingLeft: 0;
-  --pf-c-page__sidebar-body--m-nav--PaddingTop: var(--pf-global--spacer--sm);
-  --pf-c-page__sidebar-body--m-nav--PaddingBottom: var(--pf-global--spacer--md);
+  --pf-c-page__sidebar-body--PaddingRight: var(--pf-c-page--inset);
+  --pf-c-page__sidebar-body--PaddingLeft: var(--pf-c-page--inset);
   --pf-c-page__sidebar-body--m-menu--PaddingTop: 0;
   --pf-c-page__sidebar-body--m-menu--PaddingBottom: 0;
   --pf-c-page__sidebar-body--m-menu--BorderTopColor: var(--pf-global--BackgroundColor--dark-200);
   --pf-c-page__sidebar-body--m-menu--BorderTopWidth: var(--pf-global--BorderWidth--sm);
   --pf-c-page__sidebar-body--m-menu--c-context-selector--BorderBottomColor: var(--pf-global--BackgroundColor--dark-200);
-  --pf-c-page__sidebar-body--m-inset--PaddingLeft: var(--pf-global--spacer--lg);
-  --pf-c-page__sidebar-body--m-inset--PaddingRight: var(--pf-global--spacer--lg);
 
   @media screen and (min-width: $pf-global--breakpoint--xl) {
     --pf-c-page__sidebar--TranslateX: var(--pf-c-page__sidebar--xl--TranslateX);
@@ -433,11 +431,14 @@ $pf-c-page--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
     @include pf-t-light;
 
     --pf-c-page__sidebar--BackgroundColor: var(--pf-c-page__sidebar--m-light--BackgroundColor);
+
+    border-right: var(--pf-c-page__sidebar--m-light--BorderRightWidth) solid var(--pf-c-page__sidebar--m-light--BorderRightColor);
   }
 }
 
 .pf-c-page__sidebar-body {
-  padding: var(--pf-c-page__sidebar-body--PaddingTop) var(--pf-c-page__sidebar-body--PaddingRight) var(--pf-c-page__sidebar-body--PaddingBottom) var(--pf-c-page__sidebar-body--PaddingLeft);
+  padding-right: var(--pf-c-page__sidebar-body--PaddingRight);
+  padding-left: var(--pf-c-page__sidebar-body--PaddingLeft);
 
   &.pf-m-menu {
     --pf-c-page__sidebar-body--PaddingTop: var(--pf-c-page__sidebar-body--m-menu--PaddingTop);
@@ -463,29 +464,14 @@ $pf-c-page--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
     }
   }
 
-  &.pf-m-nav {
-    --pf-c-page__sidebar-body--PaddingTop: var(--pf-c-page__sidebar-body--m-nav--PaddingTop);
-    --pf-c-page__sidebar-body--PaddingBottom: var(--pf-c-page__sidebar-body--m-nav--PaddingBottom);
+  &.pf-m-page-insets {
+    --pf-c-page__sidebar-body--PaddingRight: var(--pf-c-page--m-page-insets--inset);
+    --pf-c-page__sidebar-body--PaddingLeft: var(--pf-c-page--m-page-insets--inset);
   }
 
-  &.pf-m-inset {
-    --pf-c-page__sidebar-body--PaddingRight: var(--pf-c-page__sidebar-body--m-inset--PaddingRight);
-    --pf-c-page__sidebar-body--PaddingLeft: var(--pf-c-page__sidebar-body--m-inset--PaddingLeft);
-  }
-
-  &.pf-m-no-inset {
+  &.pf-m-inset-none {
     --pf-c-page__sidebar-body--PaddingRight: 0;
     --pf-c-page__sidebar-body--PaddingLeft: 0;
-  }
-
-  &.pf-m-no-vertical-padding {
-    --pf-c-page__sidebar-body--PaddingTop: 0;
-    --pf-c-page__sidebar-body--PaddingBottom: 0;
-  }
-
-  &.pf-m-vertical-padding {
-    padding-top: var(--pf-c-page__sidebar-body--PaddingTop);
-    padding-bottom: var(--pf-c-page__sidebar-body--PaddingBottom);
   }
 
   &.pf-m-fill {
