fix(stylelint): cleanup stylelint-scss (#5380)

--- a/src/patternfly/base/_variables.scss
+++ b/src/patternfly/base/_variables.scss
@@ -306,5 +306,5 @@
 @import "./themes/dark/variables";
 
 @include pf-theme-dark($pf-theme-dark-prefix: ":root") {
-  @include _variables;
+  @include pf-theme-dark-variables;
 }
