fix(card): added line-height

--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -321,6 +321,7 @@
   font-family: var(--pf-c-card__title-text--FontFamily);
   font-size: var(--pf-c-card__title-text--FontSize);
   font-weight: var(--pf-c-card__title-text--FontWeight);
+  line-height: var(--pf-c-card__title-text--LineHeight);
 }
 
 .pf-c-card__actions {
