fix(card): updated title weight/added title-text (#5363)

--- a/src/patternfly/components/Card/card-title.hbs
+++ b/src/patternfly/components/Card/card-title.hbs
@@ -1,6 +1,14 @@
 <div class="pf-c-card__title{{#if card-title--modifier}} {{card-title--modifier}}{{/if}}"
+  {{#if card-title--id}}
+    id="{{card-title--id}}"
+  {{/if}}
   {{#if card-title--attribute}}
     {{{card-title--attribute}}}
   {{/if}}>
-  {{> @partial-block}}
+  {{#if card-title-text--value}}
+    {{> card-title-text}}
+  {{/if}}
+  {{#if @partial-block}}
+    {{> @partial-block}}
+  {{/if}}
 </div>
