--- a/src/patternfly/demos/Card/card-template-gallery.hbs
+++ b/src/patternfly/demos/Card/card-template-gallery.hbs
@@ -3,9 +3,7 @@
     {{#> bullseye}}
       {{#> empty-state empty-state--modifier="pf-m-xs"}}
         <i class="fas fa-plus-circle pf-c-empty-state__icon"></i>
-        {{#> title titleType="h2" title--modifier="pf-m-md"}}
-          Add a new card to your page
-        {{/title}}
+        {{> card-title card-title-text--value="Add a new card to your page" card-title-text--modifier="pf-m-md"}}
         {{#> empty-state-secondary}}
           {{#> button button--modifier="pf-m-link"}}
             Add card
@@ -24,8 +22,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">Patternfly</p>
+    {{#> card-title card-title-text--value="Patternfly" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -44,8 +41,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">ActiveMQ</p>
+    {{#> card-title card-title-text--value="ActiveMq" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -64,8 +60,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">Apache Spark</p>
+    {{#> card-title card-title-text--value="Apache Spark" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -84,8 +79,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">Avro</p>
+    {{#> card-title card-title-text--value="Avro" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -95,27 +89,26 @@
     {{/card-body}}
   {{/card}}
   {{#> card card--id=(concat card-template-gallery--id '-card-5') card--modifier="pf-m-selectable-raised pf-m-selected-raised pf-m-compact"}}
-  {{#> card-header}}
-    <img src="/assets/images/FuseConnector_Icons_AzureServices.png" width="60px" alt="Logo">
-    {{#> card-actions}}
-      {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{#> check check--modifier="pf-m-standalone"}}
-        {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
-      {{/check}}
-    {{/card-actions}}
-  {{/card-header}}
-  {{#> card-title}}
-    <p id="{{card--id}}-check-label">Azure Services</p>
-    {{#> content}}
-      <small>Provided by Red Hat</small>
-    {{/content}}
-  {{/card-title}}
-  {{#> card-body}}
-    The Camel Components for Windows Azure Services provide connectivity to Azure services from Camel.
-  {{/card-body}}
+    {{#> card-header}}
+      <img src="/assets/images/FuseConnector_Icons_AzureServices.png" width="60px" alt="Logo">
+      {{#> card-actions}}
+        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{#> check check--modifier="pf-m-standalone"}}
+          {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id '-check-label"')}}{{/check-input}}
+        {{/check}}
+      {{/card-actions}}
+    {{/card-header}}
+    {{#> card-title card-title-text--value="Azure Services" card-title-text--id=(concat card--id '-check-label')}}
+      {{#> content}}
+        <small>Provided by Red Hat</small>
+      {{/content}}
+    {{/card-title}}
+    {{#> card-body}}
+      The Camel Components for Windows Azure Services provide connectivity to Azure services from Camel.
+    {{/card-body}}
   {{/card}}
   {{#> card card--id=(concat card-template-gallery--id '-card-6') card--modifier="pf-m-non-selectable-raised pf-m-compact"}}
-  {{#> card-header}}
+    {{#> card-header}}
       <img src="/assets/images/camel-saxon_200x150.png" width="60px" alt="Logo">
       {{#> card-actions}}
         {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
@@ -124,8 +117,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">Crypto</p>
+    {{#> card-title card-title-text--value="Crypto" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -144,8 +136,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">DropBox</p>
+    {{#> card-title card-title-text--value="DropBox" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -164,8 +155,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">JBoss Data Grid</p>
+    {{#> card-title card-title-text--value="JBoss Data Grid" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -184,8 +174,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">REST</p>
+    {{#> card-title card-title-text--value="Rest" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -205,8 +194,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">SWAGGER</p>
+    {{#> card-title card-title-text--value="SWAGGER" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
