--- a/src/patternfly/components/Popover/popover-title.hbs
+++ b/src/patternfly/components/Popover/popover-title.hbs
@@ -1,4 +1,7 @@
 <div class="pf-c-popover__title{{#if popover-title--modifier}} {{popover-title--modifier}}{{/if}}"
+  {{#if popover-title--id}}
+    id="{{popover-title--id}}"
+  {{/if}}
   {{#if popover-title--attribute}}
     {{{popover-title--attribute}}}
   {{/if}}>
