--- a/src/patternfly/demos/Card/templates/card-demo--popover.hbs
+++ b/src/patternfly/demos/Card/templates/card-demo--popover.hbs
@@ -7,7 +7,7 @@
         {{/button}}
       {{/popover-close}}
       {{#> popover-header}}
-        {{#> popover-title popover-title--attribute=(concat 'id="' popover--id '-popover-right-header"')}}
+        {{#> popover-title popover-title--id=(concat popover--id "-popover-right-header")}}
           {{#> popover-title-text}}
             Control Panel Status
           {{/popover-title-text}}
