chore(popover): fix icons, icon size

--- a/src/patternfly/components/Popover/popover-title.hbs
+++ b/src/patternfly/components/Popover/popover-title.hbs
@@ -8,9 +8,9 @@
   {{#> wrapper popover-title-icon--type=(ternary popover-title-icon--type popover-title-icon--type
         (ternary popover--IsDefaultAlert "bell"
         (ternary popover--IsInfoAlert "info-circle"
-        (ternary popover--IsSuccessAlert "info-circle"
-        (ternary popover--IsWarningAlert "info-circle"
-        (ternary popover--IsDangerAlert "info-circle"
+        (ternary popover--IsSuccessAlert "check-circle"
+        (ternary popover--IsWarningAlert "exclamation-triangle"
+        (ternary popover--IsDangerAlert "exclamation-circle"
         false
       ))))))
   }}
