refactor(input-group): updated example params, rebased

--- a/src/patternfly/components/InputGroup/input-group-text.hbs
+++ b/src/patternfly/components/InputGroup/input-group-text.hbs
@@ -2,6 +2,9 @@
   {{#if aria-label}}
     aria-label="{{aria-label}}"
   {{/if}}
+  {{#if input-group-text--id}}
+    id="{{input-group-text--id}}"
+  {{/if}}
   {{#if input-group-text--attribute}}
     {{{input-group-text--attribute}}}
   {{/if}}>
