--- a/src/patternfly/components/Table/templates/table--scrollable--thead--tr.hbs
+++ b/src/patternfly/components/Table/templates/table--scrollable--thead--tr.hbs
@@ -1,13 +1,18 @@
 {{#> table-tr}}
   {{#if table--scrollable--Column1IsStickyColumn}}
-    {{> table--scrollable--th table--scrollable--th--modifier=table--scrollable--th--modifier--cell-1-modifier table--scrollable--th--content=cell-1--content table-th--attribute='scope="col" style="--pf-c-table__sticky-column--MinWidth: 100px;"' table-th--sortable="true" table-th--IsStickyColumn="true"}}
+    {{> table--scrollable--th
+        table--scrollable--th--modifier=table--scrollable--th--modifier--cell-1-modifier
+        table--scrollable--th--content=cell-1--content
+        table-th--attribute='scope="col" style="--pf-c-table__sticky-cell--MinWidth: 100px;"'
+        table-th--sortable=true
+        table-th--IsStickyLeft=true}}
   {{else}}
-    {{> table--scrollable--th table--scrollable--th--content=cell-1--content table-th--sortable="true"}}
+    {{> table--scrollable--th table--scrollable--th--content=cell-1--content table-th--sortable=true}}
   {{/if}}
   {{#if table--scrollable--Column2IsStickyColumn}}
-    {{> table--scrollable--th table--scrollable--th--modifier=table--scrollable--th--modifier--cell-2-modifier table--scrollable--th--content=cell-2--content table-th--attribute='scope="col" style="--pf-c-table__sticky-column--MinWidth: 120px; --pf-c-table__sticky-column--Left: 100px;"' table-th--sortable="true" table-th--IsStickyColumn="true"}}
+    {{> table--scrollable--th table--scrollable--th--modifier=table--scrollable--th--modifier--cell-2-modifier table--scrollable--th--content=cell-2--content table-th--attribute='scope="col" style="--pf-c-table__sticky-cell--MinWidth: 120px; --pf-c-table__sticky-cell--Left: 100px;"' table-th--sortable=true table-th--IsStickyLeft=true}}
   {{else}}
-    {{> table--scrollable--th table--scrollable--th--content=cell-2--content table-th--sortable="true"}}
+    {{> table--scrollable--th table--scrollable--th--content=cell-2--content table-th--sortable=true}}
   {{/if}}
   {{> table--scrollable--th table--scrollable--th--content=cell-3--content table--scrollable--th--icon=cell-3--icon}}
   {{> table--scrollable--th table--scrollable--th--content=cell-4--content table--scrollable--th--icon=cell-4--icon}}
@@ -15,5 +20,14 @@
   {{> table--scrollable--th table--scrollable--th--content=cell-6--content table--scrollable--th--icon=cell-6--icon}}
   {{> table--scrollable--th table--scrollable--th--content=cell-7--content table--scrollable--th--icon=cell-7--icon}}
   {{> table--scrollable--th table--scrollable--th--content=cell-8--content table--scrollable--th--icon=cell-8--icon}}
-  {{> table--scrollable--th table--scrollable--th--content=cell-9--content table--scrollable--th--icon=cell-9--icon}}
+
+  {{#if table--scrollable--ColumnLastIsStickyColumn}}
+    {{> table--scrollable--th
+        table--scrollable--th--modifier=table--scrollable--th--modifier--cell-9-modifier
+        table--scrollable--th--content=cell-9--content
+        table-th--attribute='scope="col" style="--pf-c-table__sticky-cell--MinWidth: 150px;"'
+        table-th--IsStickyRight=true}}
+  {{else}}
+    {{> table--scrollable--th table--scrollable--th--content=cell-9--content table--scrollable--th--icon=cell-9--icon}}
+  {{/if}}
 {{/table-tr}}
